# chess-coach

./: .gitignore  BACKLOG.md  BUGS.md  IDEAS.md  README.md  VISION.md  config.example.yaml  config.mobile.yaml  config.yaml  pyproject.toml  requirements-dev.txt  requirements-mobile.txt  requirements.txt  tox.ini
docs/: android-integration.md  blunder-improvements.md  coaching-changelog.md  coaching-philosophy.md  coaching-protocol.md  evaluation.md  llm-probe-findings.md  model-profiler.md  model-scorecard.md  pedagogy.md
scripts/: bench_models.py  eval_aggregate.py  eval_calibrate.py  eval_check_annotations.py  eval_coaching.py  eval_models.py  eval_move_feedback_pairwise.py  eval_pairwise.py  eval_run.py  install_mobile.sh  monitor.py  pedagogy_check.py  probe_llm_chess.py  profile_model.py  run_gemma_cap1.ps1  run_move_feedback_pairwise.ps1  run_pairwise_gemma.ps1  run_pairwise_qwen.ps1  run_profile.ps1  run_qwen_on_retest.ps1  run_qwen_topup.ps1  run_repeat_ab.ps1  test_coaching_diff.py  tunnel_heartbeat.ps1
tests/: conftest.py  test_analyzer.py  test_cli.py  test_cli_provider.py  test_coach.py  test_coaching_arrows.py  test_engine.py  test_eval_aggregate.py  test_eval_annotations.py  test_eval_benchmark.py  test_eval_calibrate.py  test_eval_judge.py  test_eval_move_feedback.py  test_eval_objective.py  test_eval_pairwise.py  test_eval_profile.py  test_eval_run.py  test_eval_scoring.py  test_llm.py  test_llm_coaching_properties.py  test_llm_outcome.py  test_mobile.py  test_pedagogy_eval_guidance.py  test_pedagogy_features.py  test_pedagogy_guard.py  test_play.py  (+13 more)
(+78 files in other folders)
